--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
@@ -1,17 +1,27 @@
+:host {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
 .layout {
   display: flex;
-  height: 100vh;
+  width: 96rem;
+  height: 54rem;
+  @media (max-width: 96rem) {
+    width: 100%;
+    height: 100vh;
+  }
 }
 
 lib-dashboard-navigation-bar {
-  min-width: 5.5rem;
-  max-width: 5.5rem;
+  width: 5.5rem;
   background-color: var(--gray-400);
 }
 
 lib-dashboard-sidebar {
-  min-width: 20rem;
-  max-width: 20rem;
+  width: 20rem;
   background-color: var(--gray-300);
 }
 
