--- a/libs/question-randomizer/dashboard/shell/src/ui/navigation-bar/dashboard-navigation-bar.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/ui/navigation-bar/dashboard-navigation-bar.component.scss
@@ -1,6 +1,9 @@
 :host {
   padding: 1rem;
   position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 svg-icon {
@@ -27,7 +30,7 @@ svg-icon {
 }
 
 footer {
-  width: 40px;
+  width: 3.4rem;
   position: absolute;
   bottom: 1.5rem;
 }
