--- a/libs/shared/styles/src/styles/abstracts/_colors.scss
+++ b/libs/shared/styles/src/styles/abstracts/_colors.scss
@@ -21,7 +21,7 @@
 
   --gray-100: #fcfdf8; // card-bg-color
   --gray-200: #f2f2f2; // dashboard-background-color and table headers
-  --gray-300: #e3e3e1; // sidebar-background-color
+  --gray-300: #e3e3e1; // sidebar-background-color and table header background
   --gray-400: #cececc; // vertical bar on the left and I think not selected icons on sidebar
   --gray-500: #b1b1af; // divider-color
   --gray-600: #bebebe;
