--- a/libs/shared/styles/src/styles/abstracts/_variables.scss
+++ b/libs/shared/styles/src/styles/abstracts/_variables.scss
@@ -1,7 +1,7 @@
 $font-family: 'Figtree', sans-serif;
 $headers-font-family: 'Open Sans', sans-serif;
 $font-weight: 500;
-$line-height: 1.6;
-$font-size: 1.2rem;
+$line-height: normal;
+$font-size: 1rem;
 
 $border-radius: 0.5rem;
