--- a/libs/shared/styles/src/styles/base/_typography.scss
+++ b/libs/shared/styles/src/styles/base/_typography.scss
@@ -4,7 +4,7 @@ body {
   font-family: $font-family;
   font-size: $font-size;
   font-weight: $font-weight;
-  // line-height: $line-height;
+  line-height: $line-height;
 }
 
 h1,
