--- a/libs/shared/ui/src/table/table.component.scss
+++ b/libs/shared/ui/src/table/table.component.scss
@@ -1,3 +1,11 @@
 table {
   width: 100%;
 }
+
+.tbody-cell {
+  background-color: var(--gray-100);
+  padding: 0.5rem;
+  height: 100%;
+  display: flex;
+  align-items: center;
+}
