--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.scss
@@ -42,3 +42,48 @@ header {
     }
   }
 }
+
+// button {
+//   display: flex;
+//   // align-items: center;
+//   // justify-content: center;
+//   outline: none;
+//   cursor: pointer;
+//   width: 100%;
+//   height: 50px;
+//   background-image: linear-gradient(
+//     to top,
+//     var(--gray-400) 0%,
+//     white 80%,
+//     var(--gray-100) 100%
+//   );
+//   //background-image: linear-gradient(to top, #d8d9db 0%, #fff 80%, #fdfdfd 100%);
+//   border-radius: 4px;
+//   border: 1px solid #8f9092;
+//   // border: 1px solid var(--gray-500);
+//   transition: all 0.2s ease;
+//   font-family: 'Source Sans Pro', sans-serif;
+
+//   font-weight: 600;
+//   color: var(--gray-800);
+//   text-shadow: 0 1px white;
+//   padding: 1rem;
+//   span {
+//     margin-left: 0.5rem;
+//   }
+//   &.active {
+//     box-shadow: 0 4px 3px 1px var(--gray-100), 0 6px 8px #d6d7d9,
+//       0 -4px 4px #cecfd1, 0 -6px 4px #fefefe, inset 0 0 5px 3px #999,
+//       inset 0 0 30px var(--gray-700);
+//     // box-shadow: 0 4px 3px 1px #fcfcfc, 0 6px 8px #d6d7d9, 0 -4px 4px #cecfd1,
+//     //   0 -6px 4px #fefefe, inset 0 0 5px 3px #999, inset 0 0 30px #aaa;
+//   }
+// }
+
+// button:hover,
+// button:focus {
+//   &:not(.active) {
+//     box-shadow: 0 4px 3px 1px #fcfcfc, 0 6px 8px #d6d7d9, 0 -4px 4px #cecfd1,
+//       0 -6px 4px #fefefe, inset 0 0 3px 3px #cecfd1;
+//   }
+// }
