--- a/libs/shared/styles/src/styles/components/_table.scss
+++ b/libs/shared/styles/src/styles/components/_table.scss
@@ -13,8 +13,9 @@ table {
   thead {
     th {
       border-bottom: $border;
+      padding: 0 0.5rem;
       &:not(:last-child) {
-        border-right: $border;
+        // border-right: $border;
       }
     }
   }
