--- a/libs/question-randomizer/dashboard/interview/shell/src/interview-shell.component.html
+++ b/libs/question-randomizer/dashboard/interview/shell/src/interview-shell.component.html
@@ -17,7 +17,7 @@
     [libColumn]="{ propertyName: 'answer', type: 'COLUMN' }"
     let-item="item"
   >
-    <div class="answer" [innerHTML]="item.answer"></div>
+    <div [innerHTML]="item.answer | normalizeSpace"></div>
   </ng-template>
 </lib-table>
 }
