--- a/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.scss
+++ b/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.scss
@@ -1,3 +1,13 @@
+:host {
+  .answer {
+    ::ng-deep p {
+      overflow: hidden;
+      text-overflow: ellipsis;
+      white-space: nowrap;
+    }
+  }
+}
+
 .search {
   display: flex;
   margin: 0 1rem 1.5rem 1rem;
