--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.scss
@@ -16,17 +16,20 @@
 }
 
 lib-dashboard-navigation-bar {
-  width: 5.5rem;
+  min-width: 5.5rem;
+  max-width: 5.5rem;
   background-color: var(--gray-400);
 }
 
 lib-dashboard-sidebar {
-  width: 20rem;
+  min-width: 20rem;
+  max-width: 20rem;
   background-color: var(--gray-300);
 }
 
 .main {
-  flex: 1;
+  flex: 1 1 auto; /* allows growth within the flex container */
+  min-width: 0; /* important: prevents flex child from overflowing */
   display: flex;
   flex-direction: column;
   background-color: var(--gray-200);
