--- a/libs/shared/ui/src/table/table.component.scss
+++ b/libs/shared/ui/src/table/table.component.scss
@@ -1,9 +1,11 @@
 table {
   width: 100%;
+  table-layout: fixed;
 }
 
 .tbody-cell {
   background-color: var(--gray-100);
   padding: 0.5rem;
   height: 100%;
+  // max-width: 100%;
 }
