--- a/libs/shared/styles/src/styles/utilities/_utilities.scss
+++ b/libs/shared/styles/src/styles/utilities/_utilities.scss
@@ -6,6 +6,10 @@
   cursor: pointer;
 }
 
+.p-events-none {
+  pointer-events: none;
+}
+
 .divider {
   height: 2px;
   width: 100%;
@@ -15,4 +19,16 @@
 
 .text-align-center {
   text-align: center;
+}
+
+.d-center {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.truncate {
+  overflow: hidden;
+  text-overflow: ellipsis;
+  white-space: nowrap;
 }
