--- a/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.scss
+++ b/libs/question-randomizer/dashboard/question/feature/src/list/question-list.component.scss
@@ -1,10 +1,9 @@
+@use 'abstracts/mixins' as *;
+
 :host {
-  .answer {
-    ::ng-deep p {
-      overflow: hidden;
-      text-overflow: ellipsis;
-      white-space: nowrap;
-    }
+  .answer,
+  &::ng-deep p {
+    @include truncate;
   }
 }
 
@@ -12,4 +11,8 @@
   display: flex;
   margin: 0 1rem 1.5rem 1rem;
   justify-content: space-between;
+}
+
+svg-icon {
+  display: flex;
 }
