--- a/libs/shared/styles/src/styles/utilities/_spacing.scss
+++ b/libs/shared/styles/src/styles/utilities/_spacing.scss
@@ -10,6 +10,22 @@
   margin-top: 2rem !important;
 }
 
+.margin-left-8 {
+  margin-left: 0.5rem !important;
+}
+
+.margin-left-16 {
+  margin-left: 1rem !important;
+}
+
+.margin-left-24 {
+  margin-left: 1.5rem !important;
+}
+
+.margin-left-32 {
+  margin-left: 2rem !important;
+}
+
 .margin-bottom-16 {
   margin-bottom: 1rem !important;
 }
