--- a/libs/shared/ui/src/table/table.component.scss
+++ b/libs/shared/ui/src/table/table.component.scss
@@ -1,3 +1,5 @@
+@use 'abstracts/mixins' as *;
+
 table {
   width: 100%;
   table-layout: fixed;
@@ -7,5 +9,4 @@ table {
   background-color: var(--gray-100);
   padding: 0.5rem;
   height: 100%;
-  // max-width: 100%;
 }
