--- a/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.html
+++ b/libs/question-randomizer/dashboard/shell/src/ui/sidebar/dashboard-sidebar.component.html
@@ -4,8 +4,8 @@
     [value]="currentTheme()"
     (toggled)="changeTheme.emit($event ?? '')"
   >
-    <lib-button-toggle value="dark-theme">EN</lib-button-toggle>
-    <lib-button-toggle value="light-theme">PL</lib-button-toggle>
+    <lib-button-toggle value="dark-theme">English</lib-button-toggle>
+    <lib-button-toggle value="light-theme">Polish</lib-button-toggle>
   </lib-button-toggle-group>
 </header>
 <nav class="sidebar-nav">
