--- a/libs/shared/ui/src/table/sortable-header/sortable-header.component.html
+++ b/libs/shared/ui/src/table/sortable-header/sortable-header.component.html
@@ -1,4 +1,4 @@
-<button class="c-pointer" (click)="sortByColumn(column())">
+<button class="button-as-span" (click)="sortByColumn(column())">
   {{ column().displayName
   }}<ng-container *ngIf="sortDefinition()">
     <ng-container
