--- a/libs/shared/ui/src/table/table.component.scss
+++ b/libs/shared/ui/src/table/table.component.scss
@@ -10,3 +10,11 @@ table {
   padding: 0.5rem;
   height: 100%;
 }
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  padding: 0 1rem;
+}
