--- a/libs/question-randomizer/dashboard/category/feature/src/list/category-list.component.html
+++ b/libs/question-randomizer/dashboard/category/feature/src/list/category-list.component.html
@@ -7,7 +7,7 @@
     [formControl]="searchTextControl"
   ></lib-input-text>
   <div class="buttons">
-    <button (click)="onAdd()">Add Category</button>
+    <lib-button (click)="onAdd()">Add</lib-button>
   </div>
 </div>
 <lib-table
