Fixed language toggle button

--- a/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
+++ b/libs/question-randomizer/dashboard/shell/src/dashboard-shell.component.html
@@ -3,8 +3,8 @@
     (logout)="onSignOut()"
   ></lib-dashboard-navigation-bar>
   <lib-dashboard-sidebar
-    [currentTheme]="currentTheme()"
-    (changeTheme)="onChangeTheme($event)"
+    [currentLanguage]="currentLanguage()"
+    (changeLanguage)="onChangeLanguage($event)"
   ></lib-dashboard-sidebar>
 
   <div class="main">
