--- a/libs/shared/styles/src/styles/utilities/_spacing.scss
+++ b/libs/shared/styles/src/styles/utilities/_spacing.scss
@@ -42,3 +42,8 @@
   padding-left: 1.5rem !important;
   padding-right: 1.5rem !important;
 }
+
+.margin-y-16 {
+  margin-top: 1rem !important;
+  margin-bottom: 1rem !important;
+}
