--- a/libs/shared/styles/src/styles/utilities/_utilities.scss
+++ b/libs/shared/styles/src/styles/utilities/_utilities.scss
@@ -15,6 +15,9 @@
   width: 100%;
   background-color: var(--gray-500);
   border: none;
+  &-16 {
+    margin: 1rem 0;
+  }
 }
 
 .text-align-center {
