--- a/libs/shared/styles/src/styles/utilities/_spacing.scss
+++ b/libs/shared/styles/src/styles/utilities/_spacing.scss
@@ -26,6 +26,14 @@
   margin-left: 2rem !important;
 }
 
+.margin-bottom-4 {
+  margin-bottom: 0.25rem !important;
+}
+
+.margin-bottom-8 {
+  margin-bottom: 0.5rem !important;
+}
+
 .margin-bottom-16 {
   margin-bottom: 1rem !important;
 }
